unpackaged/main/default/objects/SurveyResult__c/fields/Disat_Visit_Connect_App__c.field-meta.xml
<CustomField>
    <fullName>Disat_Visit_Connect_App__c</fullName>
    <label>Disat.Visit Connect App</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Delay</fullName>
            </value>
            <value>
                <fullName>Error/s</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>