unpackaged/main/default/objects/SurveyResult__c/fields/Disat_Visit_Connect_errors__c.field-meta.xml
<CustomField>
    <fullName>Disat_Visit_Connect_errors__c</fullName>
    <label>Disat.Visit Connect error</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice/order error</fullName>
            </value>
            <value>
                <fullName>Not as expected</fullName>
            </value>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Pre-show</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>