unpackaged/main/default/objects/SurveyResult__c/fields/Disat_Visit_Connect_quality__c.field-meta.xml
<CustomField>
    <fullName>Disat_Visit_Connect_quality__c</fullName>
    <label>Disat.Visit Connect quality</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Faulty</fullName>
            </value>
            <value>
                <fullName>Not as expected</fullName>
            </value>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Pre-show</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Professionalism</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Value for money</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>