unpackaged/main/default/objects/SurveyResult__c/fields/Distro_box_extra_reasons__c.field-meta.xml
<CustomField>
    <fullName>Distro_box_extra_reasons__c</fullName>
    <label>Distro box extra reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>