unpackaged/main/default/objects/SurveyResult__c/fields/Document_upload__c.field-meta.xml
<CustomField>
    <fullName>Document_upload__c</fullName>
    <label>Document upload</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>