unpackaged/main/default/objects/SurveyResult__c/fields/Document_uploads__c.field-meta.xml
<CustomField>
    <fullName>Document_uploads__c</fullName>
    <label>Document uploads</label>
    <type>Url</type>
</CustomField>