unpackaged/main/default/objects/SurveyResult__c/fields/Ease_of_business__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_business__c</fullName>
    <label>Ease of business</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>