unpackaged/main/default/objects/SurveyResult__c/fields/End_Additional_comments__c.field-meta.xml
<CustomField>
    <fullName>End_Additional_comments__c</fullName>
    <label>End.Additional comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>