unpackaged/main/default/objects/SurveyResult__c/fields/everused_Other_aware_of__c.field-meta.xml
<CustomField>
    <fullName>everused_Other_aware_of__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Everused.Other aware of</label>
    <type>Checkbox</type>
</CustomField>