unpackaged/main/default/objects/SurveyResult__c/fields/Everused_Other_GES_product_service__c.field-meta.xml
<CustomField>
    <fullName>Everused_Other_GES_product_service__c</fullName>
    <label>Everused.Other GES product/service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>