unpackaged/main/default/objects/SurveyResult__c/fields/Everused_Prod_service_suggestion__c.field-meta.xml
<CustomField>
    <fullName>Everused_Prod_service_suggestion__c</fullName>
    <label>Everused.Prod/service suggestion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>