unpackaged/main/default/objects/SurveyResult__c/fields/Expresso_Sat__c.field-meta.xml
<CustomField>
    <fullName>Expresso_Sat__c</fullName>
    <formula>CASE(  Sat_Expresso__c  , 0, 0, 25, 0, 50, 100, 75, 100, 100, 100,  Sat_Expresso__c )</formula>
    <label>Expresso Sat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>