unpackaged/main/default/objects/SurveyResult__c/fields/First_time_Exhibitor__c.field-meta.xml
<CustomField>
    <fullName>First_time_Exhibitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First-time Exhibitor</label>
    <type>Checkbox</type>
</CustomField>