unpackaged/main/default/objects/SurveyResult__c/fields/Focus_Groups_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Focus_Groups_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Focus Groups Opt In</label>
    <type>Checkbox</type>
</CustomField>