unpackaged/main/default/objects/SurveyResult__c/fields/Graphics__c.field-meta.xml
<CustomField>
    <fullName>Graphics__c</fullName>
    <label>Graphics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Definitely Would</fullName>
                <isActive>false</isActive>
                <label>Definitely Would</label>
            </value>
            <value>
                <fullName>Definitely Wouldn&#39;t</fullName>
                <isActive>false</isActive>
                <label>Definitely Wouldn&#39;t</label>
            </value>
            <value>
                <fullName>Probably Would</fullName>
                <isActive>false</isActive>
                <label>Probably Would</label>
            </value>
            <value>
                <fullName>Probably Wouldn&#39;t</fullName>
                <isActive>false</isActive>
                <label>Probably Wouldn&#39;t</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>