unpackaged/main/default/objects/SurveyResult__c/fields/Have_you_exhibited_before__c.field-meta.xml
<CustomField>
    <fullName>Have_you_exhibited_before__c</fullName>
    <label>Have you exhibited before?</label>
    <length>18</length>
    <type>Text</type>
</CustomField>