unpackaged/main/default/objects/SurveyResult__c/fields/How_did_you_hear_about_Chat__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_Chat__c</fullName>
    <label>How did you hear about Chat</label>
    <length>254</length>
    <type>Text</type>
</CustomField>