unpackaged/main/default/objects/SurveyResult__c/fields/How_easy_were_we_to_do_business_with__c.field-meta.xml
<CustomField>
    <fullName>How_easy_were_we_to_do_business_with__c</fullName>
    <label>How easy were we to do business with?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very easy</fullName>
            </value>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Neither easy nor Difficult</fullName>
            </value>
            <value>
                <fullName>Difficult</fullName>
            </value>
            <value>
                <fullName>Very difficult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>