unpackaged/main/default/objects/SurveyResult__c/fields/Initial_Email_to_or_from_us__c.field-meta.xml
<CustomField>
    <fullName>Initial_Email_to_or_from_us__c</fullName>
    <label>Initial.Email to or from us</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent email</fullName>
            </value>
            <value>
                <fullName>Received email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>