unpackaged/main/default/objects/SurveyResult__c/fields/Initial_Specifically_using__c.field-meta.xml
<CustomField>
    <fullName>Initial_Specifically_using__c</fullName>
    <label>Initial.Specifically using</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exhibitor Manual</fullName>
            </value>
            <value>
                <fullName>Expresso Online Ordering</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Website Contact Form</fullName>
            </value>
            <value>
                <fullName>Other ordering portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>