unpackaged/main/default/objects/SurveyResult__c/fields/Initialcontact_call_from__c.field-meta.xml
<CustomField>
    <fullName>Initialcontact_call_from__c</fullName>
    <label>Initialcontact.call from</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received call</fullName>
            </value>
            <value>
                <fullName>Made call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>