unpackaged/main/default/objects/SurveyResult__c/fields/Items_ever_used__c.field-meta.xml
<CustomField>
    <fullName>Items_ever_used__c</fullName>
    <label>Items ever used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AV</fullName>
            </value>
            <value>
                <fullName>Data Services</fullName>
            </value>
            <value>
                <fullName>Design and Build</fullName>
            </value>
            <value>
                <fullName>Electrics</fullName>
            </value>
            <value>
                <fullName>Expresso</fullName>
            </value>
            <value>
                <fullName>Floor Covering</fullName>
            </value>
            <value>
                <fullName>Furniture Rental</fullName>
            </value>
            <value>
                <fullName>GES Service Desk</fullName>
            </value>
            <value>
                <fullName>Graphics</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Specialist Lighting</fullName>
            </value>
            <value>
                <fullName>Stand Fitting/Shell Extras</fullName>
            </value>
            <value>
                <fullName>Unsure/Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>