unpackaged/main/default/objects/SurveyResult__c/fields/Items_used_at_show__c.field-meta.xml
<CustomField>
    <fullName>Items_used_at_show__c</fullName>
    <label>Items used at show</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AV (BlitzlGES)</fullName>
            </value>
            <value>
                <fullName>Design and Build</fullName>
            </value>
            <value>
                <fullName>Electrical Fixtures/Fittings</fullName>
            </value>
            <value>
                <fullName>Expresso</fullName>
            </value>
            <value>
                <fullName>Floor Covering</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Graphics</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Mains Power</fullName>
            </value>
            <value>
                <fullName>Service Desk</fullName>
            </value>
            <value>
                <fullName>Specialist Lighting</fullName>
            </value>
            <value>
                <fullName>Stand Fitting</fullName>
            </value>
            <value>
                <fullName>Visit Connect</fullName>
            </value>
            <value>
                <fullName>Not applicable/Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>