unpackaged/main/default/objects/SurveyResult__c/fields/Live_Chat_Sat__c.field-meta.xml
<CustomField>
    <fullName>Live_Chat_Sat__c</fullName>
    <formula>CASE(  Sat_Live_Chat__c  , 0, 0, 25, 0, 50, 100, 75, 100, 100, 100, Sat_Live_Chat__c)</formula>
    <label>Live Chat Sat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>