unpackaged/main/default/objects/SurveyResult__c/fields/Mains_Power_Sat__c.field-meta.xml
<CustomField>
    <fullName>Mains_Power_Sat__c</fullName>
    <formula>CASE(  Sat_Mains_power__c  , 0, 0, 25, 0, 50, 100, 75, 100, 100, 100,  Sat_Mains_power__c )</formula>
    <label>Mains Power Sat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>