unpackaged/main/default/objects/SurveyResult__c/fields/Manual_Sat__c.field-meta.xml
<CustomField>
    <fullName>Manual_Sat__c</fullName>
    <formula>CASE(  Sat_Manual__c  , 0, 0, 25, 0, 50, 100, 75, 100, 100, 100, Sat_Manual__c)</formula>
    <label>Manual Sat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>