unpackaged/main/default/objects/SurveyResult__c/fields/Max_budget_for_this_show_in_EURO__c.field-meta.xml
<CustomField>
    <fullName>Max_budget_for_this_show_in_EURO__c</fullName>
    <label>maximum budget for this show in €</label>
    <length>254</length>
    <type>Text</type>
</CustomField>