unpackaged/main/default/objects/SurveyResult__c/fields/maximum_budget_for_this_show_in_AED__c.field-meta.xml
<CustomField>
    <fullName>maximum_budget_for_this_show_in_AED__c</fullName>
    <label>maximum budget for this show in AED</label>
    <length>254</length>
    <type>Text</type>
</CustomField>