unpackaged/main/default/objects/SurveyResult__c/fields/Method_first_used_to_get_in_touch__c.field-meta.xml
<CustomField>
    <fullName>Method_first_used_to_get_in_touch__c</fullName>
    <label>Method first used to get in touch</label>
    <length>254</length>
    <type>Text</type>
</CustomField>