unpackaged/main/default/objects/SurveyResult__c/fields/Name_Board_Sat__c.field-meta.xml
<CustomField>
    <fullName>Name_Board_Sat__c</fullName>
    <formula>CASE(  Sat_Name_board__c  , 0, 0, 25, 0, 50, 100, 75, 100, 100, 100,  Sat_Name_board__c )</formula>
    <label>Name Board Sat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>