unpackaged/main/default/objects/SurveyResult__c/fields/On_site_Other_Service_Desk__c.field-meta.xml
<CustomField>
    <fullName>On_site_Other_Service_Desk__c</fullName>
    <label>On-site.Other Service Desk</label>
    <length>254</length>
    <type>Text</type>
</CustomField>