unpackaged/main/default/objects/SurveyResult__c/fields/On_site_Other_Support_Staff__c.field-meta.xml
<CustomField>
    <fullName>On_site_Other_Support_Staff__c</fullName>
    <label>On-site.Other Support/Staff</label>
    <length>254</length>
    <type>Text</type>
</CustomField>