unpackaged/main/default/objects/SurveyResult__c/fields/On_site_Staff_Support_Sat__c.field-meta.xml
<CustomField>
    <fullName>On_site_Staff_Support_Sat__c</fullName>
    <formula>CASE(  SAT1_Onsite_Staff_Support__c  , 0, 0, 25, 0, 50, 100, 75, 100, 100, 100,  SAT1_Onsite_Staff_Support__c )</formula>
    <label>On-site Staff &amp; Support Sat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>