unpackaged/main/default/objects/SurveyResult__c/fields/On_site_Support_Staff__c.field-meta.xml
<CustomField>
    <fullName>On_site_Support_Staff__c</fullName>
    <label>On-site Support/Staff</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delays</fullName>
            </value>
            <value>
                <fullName>Appearance</fullName>
            </value>
            <value>
                <fullName>Knowledge</fullName>
            </value>
            <value>
                <fullName>Presence</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Technical issue</fullName>
            </value>
            <value>
                <fullName>Unhelpful</fullName>
            </value>
            <value>
                <fullName>Unprofessional behaviour</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>