unpackaged/main/default/objects/SurveyResult__c/fields/other_contact_manual_ordering__c.field-meta.xml
<CustomField>
    <fullName>other_contact_manual_ordering__c</fullName>
    <label>Other contact.manual ordering</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GES Expresso</fullName>
            </value>
            <value>
                <fullName>Order form download/print</fullName>
            </value>
            <value>
                <fullName>Online/interactive form</fullName>
            </value>
            <value>
                <fullName>Used link to other ordering site</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>