unpackaged/main/default/objects/SurveyResult__c/fields/Other_way_of_getting_in_touch__c.field-meta.xml
<CustomField>
    <fullName>Other_way_of_getting_in_touch__c</fullName>
    <label>Other way of getting in touch</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>