unpackaged/main/default/objects/SurveyResult__c/fields/Othercontact_on_site__c.field-meta.xml
<CustomField>
    <fullName>Othercontact_on_site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Othercontact.on-site</label>
    <type>Checkbox</type>
</CustomField>