unpackaged/main/default/objects/SurveyResult__c/fields/othercontact_online_method_s_used__c.field-meta.xml
<CustomField>
    <fullName>othercontact_online_method_s_used__c</fullName>
    <label>Othercontact.online method/s used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Us&#39; form (ges.com).</fullName>
            </value>
            <value>
                <fullName>Exhibitor Manual</fullName>
            </value>
            <value>
                <fullName>Expresso online ordering</fullName>
            </value>
            <value>
                <fullName>Other online ordering portal</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Web Chat</fullName>
            </value>
            <value>
                <fullName>&#39;Contact Us&#39; form (ges.com)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>