unpackaged/main/default/objects/SurveyResult__c/fields/othercontact_telephone_orders__c.field-meta.xml
<CustomField>
    <fullName>othercontact_telephone_orders__c</fullName>
    <label>Othercontact.telephone orders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>