unpackaged/main/default/objects/SurveyResult__c/fields/Overall_Satisfaction_Calc__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction_Calc__c</fullName>
    <formula>CASE(  Overall_satisfaction__c  , 0, 0, 25, 0, 50, 100, 75, 100, 100, 100,  Overall_satisfaction__c )</formula>
    <label>Overall Satisfaction_Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>