unpackaged/main/default/objects/SurveyResult__c/fields/Package_Items_Sat__c.field-meta.xml
<CustomField>
    <fullName>Package_Items_Sat__c</fullName>
    <formula>CASE(  Sat_Package_items__c  , 0, 0, 25, 0, 50, 100, 75, 100, 100, 100,  Sat_Package_items__c )</formula>
    <label>Package Items Sat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>