unpackaged/main/default/objects/SurveyResult__c/fields/Placing_orders_interaction__c.field-meta.xml
<CustomField>
    <fullName>Placing_orders_interaction__c</fullName>
    <label>Placing orders / interaction</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By downloading order form/s</fullName>
            </value>
            <value>
                <fullName>By visiting the Service Desk at the venue</fullName>
            </value>
            <value>
                <fullName>Online ordering directly via Expresso website</fullName>
            </value>
            <value>
                <fullName>Receive an email as a reminder/prompt</fullName>
            </value>
            <value>
                <fullName>Send an email</fullName>
            </value>
            <value>
                <fullName>Telephoning at my convenience</fullName>
            </value>
            <value>
                <fullName>To be called by GES</fullName>
            </value>
            <value>
                <fullName>Using digital order form/s (no need to print)</fullName>
            </value>
            <value>
                <fullName>Via Exhibitor Manual, no other websites</fullName>
            </value>
            <value>
                <fullName>Using the online Live Chat function</fullName>
            </value>
            <value>
                <fullName>Verbally</fullName>
            </value>
            <value>
                <fullName>Via social media</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>