unpackaged/main/default/objects/SurveyResult__c/fields/Planning_Ordering_Sat__c.field-meta.xml
<CustomField>
    <fullName>Planning_Ordering_Sat__c</fullName>
    <formula>CASE(  Sat_Planning_ordering__c  , 0, 0, 25, 0, 50, 100, 75, 100, 100, 100, Sat_Planning_ordering__c)</formula>
    <label>Planning&amp;Ordering Sat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>